--- a/css/style.css
+++ b/css/style.css
@@ -2586,7 +2586,7 @@ footer .border-top {
   justify-content: flex-end;
 }
 .chat-section .tab-content .chat-container .inner-container .message.sent-message .message-content {
-  background: #fafafa;
+  background: var(--whiteColor);
   padding: 10px 16px;
   border-radius: 12px;
   border-bottom-right-radius: 0;
@@ -2617,7 +2617,7 @@ footer .border-top {
 .chat-section .tab-content .chat-container .chat-send form .input-field {
   width: 100%;
   border-radius: 16px;
-  background: #fafafa;
+  background: var(--whiteColor);
   padding: 0 16px;
   display: flex;
   gap: 8px;
