--- a/css/style.scss
+++ b/css/style.scss
@@ -2403,9 +2403,13 @@ footer {
     .chat-container {
       width: 100%;
       height: 100%;
+      @media screen and (max-width: 768px) {
+        max-height: calc(80dvh - 110px);
+      }
       display: flex;
       flex-direction: column;
-       background: linear-gradient(#f3f3f3e8, #f3f3f3e8) , url(https://www.shutterstock.com/image-vector/social-media-sketch-vector-seamless-600nw-1660950727.jpg);
+      background: linear-gradient(#f3f3f3e8, #f3f3f3e8),
+        url(https://www.shutterstock.com/image-vector/social-media-sketch-vector-seamless-600nw-1660950727.jpg);
       border-radius: 16px;
       .chat-head {
         border-radius: 14px 14px 0 0;
@@ -2479,7 +2483,7 @@ footer {
         align-items: center;
         gap: 8px;
         padding: 8px;
-        background: #E5F6ED;
+        background: #e5f6ed;
         p {
           color: var(--mainColor);
         }
