--- a/css/style.scss
+++ b/css/style.scss
@@ -2776,6 +2776,7 @@ footer {
         justify-content: center;
         align-items: center;
         gap: 4px;
+        text-transform: capitalize;
         img {
           width: 12px;
           height: 12px;
@@ -2805,7 +2806,7 @@ footer {
         height: 20px;
         width: 20px;
         margin: 0; 
-        
+
       }
     }
   }
